--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Own React App</title>
-    <script type="text/javascript">
-      (function(c,l,a,r,i,t,y){
+    <script dangerouslySetInnerHTML={{
+    __html: '
+    (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "8ubj9zssta");
-  </script>
+      })(window, document, "clarity", "script", "8ubj9zssta");',
+    }
+}
+></script>
+
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
