--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Own React App</title>
-    <script dangerouslySetInnerHTML={{
+    <!-- <script dangerouslySetInnerHTML={{
     __html: '
     (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -34,7 +34,7 @@
       })(window, document, "clarity", "script", "8ubj9zssta");',
     }
 }
-></script>
+></script> -->
 
   
   </head>
