--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,16 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Own React App</title>
-    <script dangerouslySetInnerHTML={{
-    __html: '
-    (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "8ubj9zssta");',
-    }
-}
-></script>
+    <script scr='./scripts/analytics.js'></script>
 
   
   </head>
